--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <meta name="author" content="">
   <!-- Favicon icon -->
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon.png">
-  <title>Admin Pro Admin Template - The Ultimate Bootstrap 4 Admin Template</title>
+  <title>Freetags by elmac</title>
   <!-- Bootstrap Core CSS -->
   <link href="./assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom CSS -->
